# StrategyLab-v2

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: verify.yml
config/: config.example.yaml
deploy/scripts/: install_service.sh  rollback_service.sh  upgrade_service.sh
deploy/systemd/: strategylab-gaon.env.example  strategylab-gaon.service
docs/: VISION.md
docs/adr/: ADR-0001-learning-memory-core.md  ADR-0003-research-brain-contracts.md  ADR-0004-learning-memory-storage.md  ADR-0005-knowledge-lifecycle.md  ADR-0006-runtime-event-bus.md  ADR-0007-telegram-integration.md  ADR-0008-notion-sync.md  ADR-0009-provider-registry.md  ADR-0009-report-scheduler.md  ADR-0010-plugin-lifecycle-security.md  ADR-0011-durable-event-store-replay.md  ADR-0012-long-term-memory-lifecycle.md
docs/architecture/: AIResearch.md  AssistantProvider.md  AutonomousResearchOrchestrator.md  BacktestContract.md  BacktestEngine.md  BrokerConnector.md  CollaborationIntegrations.md  ConversationRuntime.md  Dashboard.md  DataQuality.md  ExternalBacktestAdapter.md  ExternalStrategyResearch.md  GaonDevelopmentContract.md  GaonPhaseAArchitecture.md  GaonPlatformMasterSpecification.md  GaonRuntimeArchitecture.md  LLMAgent.md  LLMBrain.md  LearningMemoryArchitecture.md  MarketDataArchitecture.md  MarketEngine.md  MasterBlueprint.md  MemoryAwareConversation.md  PortfolioEngine.md  RealResearchGateway.md  ResearchAssistantOrchestration.md  ResearchGrounding.md  ResearchIterationLoop.md  ResearchMemory.md  ResearchQualityScoring.md  RiskEngine.md  (+36 more)
scripts/: verify_release.py
(+322 files in other folders)
